Adding hobbies list

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family:"Coda";
-    font: size 50pt;
+    text-align:center;
+}
 
+h1 {
+    font: size 50pt;
 }
 
 header {
@@ -28,4 +31,8 @@ header {
 
 #bio {
     text-align:center;
+}
+
+#hobbies ul li:nth-child(even) {
+    color:#2914B3;
 }
