--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family:"Coda";
     text-align:center;
-}
-
-h1 {
-    font: size 50pt;
+    font-size: 50pt;
 }
 
 header {
@@ -49,6 +46,7 @@ header {
 
 #gallery {
     border: 2px solid #5036FE;
+    margin-bottom:2rem;
 }
 
 #gallery img {
@@ -57,4 +55,29 @@ header {
 
 #gallery figure {
     text-align:center;
+}
+
+/*Literature*/
+#lit {
+    border: 2px solid #2914B3;
+    margin-bottom:2rem;
+}
+
+#lit div {
+    padding:2rem;
+    max-width:40rem;
+    margin: 0 auto;
+}
+
+#lit div p {
+    padding: 0.3rem 0;
+    clear:both;
+}
+
+/*Dropcaps*/
+#lit div p:first-letter {
+    color: red;
+    float:left;
+    font-size:3em;
+    font-family:"Coda";
 }
