--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ header {
 }
 
 /*Dropcaps*/
-#lit div p:first-letter {
+#lit div  p:first-child:first-letter{
     color: purple;
     float:left;
     font-size:3em;
@@ -92,7 +92,7 @@ header {
     float:left;
 }
 
-
+/* tablet size */
 @media screen and (min-width: 60em){
     figure {
         display: grid;
@@ -106,5 +106,37 @@ header {
         font-size: 2rem;
         margin-left: 1rem;
     }
+    
+    figure img{
+        width: 100%;
+    }
 
+    #lit div {
+        max-width:100%;
+        columns: 20rem;
+    }
 }
+
+/* large screen size */
+
+@media screen and (min-width: 100em) {
+    
+    #gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+    }
+
+    hr {
+        display: none;
+    }
+
+    #gallery h2 {
+        grid-column: 1/-1;
+    }
+
+    figure {
+        display: block;
+    }
+}
+
