--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header {
 
 #video {
     text-align: center;
+    max-width: 100%;
 }
 
 h3 {
@@ -102,7 +103,12 @@ h3 {
     font-size:3em;
     font-family:"Coda";
     float:left;
+
+
 }
+
+
+
 
 /* tablet size */
 @media screen and (min-width: 60em){
