--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,9 @@ header {
 
 #video {
     text-align: center;
-    max-width: 100%;
+    width: 100%;
+    display:block;
+    margin:auto;
 }
 
 h3 {
@@ -158,5 +160,11 @@ h3 {
     figure {
         display: block;
     }
+}
+
+/* Contact Form */
+
+#formElements {
+    display:grid;
 }
 
