--- a/css/style.css
+++ b/css/style.css
@@ -166,5 +166,46 @@ h3 {
 
 #formElements {
     display:grid;
+    row-gap:.5em;
 }
 
+#contact {
+    padding: 1rem;
+    max-width: 600px;
+    margin:2rem auto;
+}
+
+fieldset {
+    border: 2px solid #2914B3;
+    margin-top: 1em;
+    margin-bottom:1em;
+}
+
+legend {
+    background-color: #2914B3;
+    color: white;
+    padding:.5em;
+}
+
+#contact input, #contact textarea, #contact select, #contact button {
+    padding: .5em;
+    font-size:1rem;
+}
+
+#contact ul {
+    list-style:none;
+    padding:0px;
+}
+
+#contact li {
+    margin:1rem;
+}
+
+#contact button {
+    background-color: #2914B3;
+    color: white;
+    border: 1px solid #5036FE;
+    max-width:400px;
+    width:50%;
+    justify-self: center;
+}
