--- a/css/style.css
+++ b/css/style.css
@@ -204,12 +204,13 @@ legend {
     margin:1rem;
 }
 
-#contact button {
+#button {
     background-color: #2914B3;
     color: white;
     border: 1px solid #5036FE;
     max-width:400px;
     width:50%;
+    margin: auto;
     justify-self: center;
 }
 
