--- a/css/nav.css
+++ b/css/nav.css
@@ -16,11 +16,18 @@ body {
 /* add some padding back to rest of page */
 main {
     padding: 2vw;
-    
+
 }
 
 /* navbar */
-
+.navbar {
+    background-color: #333;
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
 
 
 /* logo */
