--- a/css/nav.css
+++ b/css/nav.css
@@ -31,9 +31,20 @@ main {
 
 
 /* logo */
+.logo {
+    display: flex;
+    align-items: center;
 
+}
 
+.logo img {
+    height: 7vw;
+    width: 7vw;
+}
 
+.logo h1 {
+    font-size: 1.2em;
+}
 /* navigation list */
 
 
