add navbar links styles

--- a/css/nav.css
+++ b/css/nav.css
@@ -46,6 +46,12 @@ main {
     font-size: 1.2em;
 }
 /* navigation list */
+.navbar-links li {
+    list-style: none;
+    display: block;
+    padding: 0.5em 0;
+
+}
 
 
 /*  
@@ -53,7 +59,15 @@ main {
  and then on hover
 */
 
-
+.navbar-links a {
+    color: whitesmoke;
+    background-attachment: #333;
+    font-size: 1.5rem;
+    padding: 1rem 1.25rem;
+    letter-spacing: 2px;
+    text-decoration: none;
+    display: inline-block;
+}
 
 
 
