--- a/css/nav.css
+++ b/css/nav.css
@@ -61,7 +61,7 @@ main {
 
 .navbar-links a {
     color: whitesmoke;
-    background-attachment: #333;
+    background-color: #333;
     font-size: 1.5rem;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
@@ -69,6 +69,13 @@ main {
     display: inline-block;
 }
 
+.navbar-links a:hover, .navbar-links a:focus {
+    color: whitesmoke;
+    background-color: #333;
+    border-radius: 10px;
+    outline: none;
+    filter: invert(1);
+}
 
 
 /* 
