--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,8 @@ h3 {
     text-align:center;
 }
 
-/*Literature*/
+/*Blog*/
+
 #lit {
     border: 2px solid #2914B3;
     margin-bottom:2rem;
@@ -123,7 +124,24 @@ h3 {
 
 }
 
+/*This code creates the animation in the literature blog section*/
 
+#lit {
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+}
 
 /* tablet size */
 @media screen and (min-width: 60em){
