--- a/css/nav.css
+++ b/css/nav.css
@@ -3,97 +3,59 @@ html {
     scroll-behavior: smooth;
 }
 
-/* 
- get rid of padding & sizing on body so
- header is at top
-*/
-body {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-/* add some padding back to rest of page */
-main {
-    padding: 2vw;
-
-}
-
-/* navbar */
-.navbar {
-    background-color: #333;
-    color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    padding: 1rem;
-}
-
-
-/* logo */
 .logo {
-    display: flex;
-    align-items: center;
-
+    margin-top: 15px;
 }
 
-.logo img {
-    height: 7vw;
-    width: 7vw;
+header {
+    margin-bottom:10px;
+    margin-top:-10px;
+    margin-left: -10px;
+    margin-right: -10px;
 }
 
-.logo h1 {
-    font-size: 1.2em;
-}
-/* navigation list */
-.navbar-links li {
-    list-style: none;
-    display: block;
-    padding: 0.5em 0;
-
-}
-
-
-/*  
- style all a tags in header 
- and then on hover
-*/
-
-.navbar-links a {
-    color: whitesmoke;
-    background-color: #333;
-    font-size: 2rem;
-    padding: 1rem 1.25rem;
-    letter-spacing: 2px;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.navbar-links a:hover, .navbar-links a:focus {
-    color: whitesmoke;
-    background-color: #333;
+.mobile-container {
+    max-width: 100%;
+    margin: 0;
+    background-color: #555;
+    height: 100%;
+    color: white;
     border-radius: 10px;
-    outline: none;
-    filter: invert(1);
+}
+  
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+}
+  
+.topnav #myLinks {
+    display: none;
+}
+  
+.topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+  
+.topnav a.icon {
+    background: #2914B3;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+  
+.topnav a:hover {
+    background-color: #2914B3;
+    color: #FFDF0F;
+}
+  
+.active {
+    background-color: #00aeff;
+    color: white;
 }
 
-
-/* 
-media query for non-mobile nav bar
-min-width set to width of nav elements 
-such that no text wraps 
-*/
-
-@media screen and (min-width: 60rem) {
-
-    .navbar {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    
-    .navbar ul {
-        display: flex;
-        justify-content:space-between;
-    }
-}
